se agrego la vista del home

--- a/src/app/components/home-main/home-main.component.html
+++ b/src/app/components/home-main/home-main.component.html
@@ -1,1 +1,17 @@
-<p>home-main works!</p>
+<div class="container">
+  
+    <div class="content">
+        <h2 class="title">Asiste a tu evento</h2>
+        
+        <label >Documento</label>
+        <input type="text" placeholder="ingrese el documento">
+        <label>Codigo Del Evento</label>
+        <input type="number" placeholder="ingrese el codigo del evento">
+
+        <div class="btn-home">
+            <a href="#" class="btn">Asistir</a>
+        </div>
+    </div>
+
+</div>
+   
