--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,12 @@
-<p>header works!</p>
+<div class="head">
+
+    <div class="logo">
+        <a href="#"><img src="../../../assets/images/LogoEventos2.PNG" alt=""></a>
+    </div>
+    
+    <div class="nav">
+        <a href="#">Iniciar sesion</a>
+    </div>
+  
+</div>
+
