se finalizo el componente signin

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <div class="head">
 
     <div class="logo">
-        <a href="#"><img src="../../../assets/images/LogoEventos2.PNG" alt=""></a>
+        <a [routerLink]="['/']" ><img src="../../../assets/images/LogoEventos2.PNG" alt=""></a>
     </div>
     
     <div class="nav">
-        <a href="#">Iniciar sesion</a>
+        <a [routerLink]="['/signin']" >Iniciar sesion</a>
     </div>
   
 </div>
