--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,1 +1,13 @@
-<p>sign-in works!</p>
+<div class="login-container">
+    <div class="login-info-container">
+      <h1 class="title">Iniciar sesión</h1>
+      <form class="inputs-container">
+          <input class="input" type="text" placeholder="Usuario">
+          <input class="input" type="text" placeholder="Contraseña">
+          <p>¿Has olvidado tu contraseña? <span class="span">haga clic aquí</span></p>
+          <button class="btn">Iniciar</button>
+          <p>¿No tienes una cuenta?<span class="span">Registrate</span></p>
+      </form>
+    </div>
+</div>
+
