se agregaron modificaciones a diferentes componentes

--- a/src/app/components/register-aprendiz/register-aprendiz.component.html
+++ b/src/app/components/register-aprendiz/register-aprendiz.component.html
@@ -1,1 +1,13 @@
-<p>register-aprendiz works!</p>
+<div class="login-container">
+    <div class="login-info-container">
+      <h1 class="title">Registro Aprendiz</h1>
+      <form class="inputs-container" >
+          <input class="input" type="text" placeholder="Nombre Completo" id=" " name="" >
+          <input class="input" type="text" placeholder="documento " id="" name="">
+          <input class="input" type="text" placeholder="correo" id="" name="">
+          <input class="input" type="text" placeholder="Programa de formacion" id="" name="">
+          <button class="btn" type="submit">Registrar</button>
+      </form>
+    </div>
+</div>
+
