--- a/src/app/components/update-aprendiz/update-aprendiz.component.html
+++ b/src/app/components/update-aprendiz/update-aprendiz.component.html
@@ -1,1 +1,12 @@
-<p>update-aprendiz works!</p>
+<div class="login-container">
+    <div class="login-info-container">
+      <h1 class="title">Actualizar Aprendiz</h1>
+      <form class="inputs-container" >
+          <input class="input" type="text" placeholder="Nombre Completo" id=" " name="" >
+          <input class="input" type="text" placeholder="documento " id="" name="">
+          <input class="input" type="text" placeholder="correo" id="" name="">
+          <input class="input" type="text" placeholder="Programa de formacion" id="" name="">
+          <button class="btn" type="submit">Actualizar</button>
+      </form>
+    </div>
+</div>
