--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
@@ -1,1 +1,20 @@
-<p>list-all-aprendiz works!</p>
+<table class="table table-striped">
+	<thead>
+		<tr>
+			<th scope="col">flata</th>
+			<th scope="col" sortable="name" >falta</th>
+			<th scope="col" sortable="area" >Area</th>
+			<th scope="col" sortable="population" >Population</th>
+            <th scope="col" sortable="population" >Population</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr >
+			<th scope="row"></th>
+			<td>falta</td>
+			<td>falta</td>
+            <td>falta</td>
+            <td>falta</td>
+		</tr>
+	</tbody>
+</table>
