--- a/src/app/components/register-aprendiz/register-aprendiz.component.html
+++ b/src/app/components/register-aprendiz/register-aprendiz.component.html
@@ -2,7 +2,7 @@
     <div class="login-info-container">
       <h1 class="title">Registro Aprendiz</h1>
       <form class="inputs-container" >
-          <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "aprendiz.name" id="name" name="name" >
+          <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "aprendiz.full_name" id="name" name="name" >
           <input class="input" type="number" placeholder="documento " [(ngModel)]= "aprendiz.document" id="document" name="document">
           <input class="input" type="text" placeholder="correo" [(ngModel)]="aprendiz.email" id="email" name="email">
           <input class="input" type="text" placeholder="Programa de formacion" [(ngModel)]="aprendiz.course" id=" course" name=" course">
