--- a/src/app/components/update-aprendiz/update-aprendiz.component.html
+++ b/src/app/components/update-aprendiz/update-aprendiz.component.html
@@ -1,12 +1,12 @@
 <div class="login-container" *ngIf="aprendiz">
   <div class="login-info-container">
-    <h1 class="title">Registro Aprendiz</h1>
+    <h1 class="title">Actualizar Aprendiz</h1>
     <form class="inputs-container" (ngSubmit)="updateAprendiz()">
         <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "aprendiz.full_name" id="name" name="name" >
         <input class="input" type="number" placeholder="documento " [(ngModel)]= "aprendiz.document" id="document" name="document">
         <input class="input" type="text" placeholder="correo" [(ngModel)]="aprendiz.email" id="email" name="email">
         <input class="input" type="text" placeholder="Programa de formacion" [(ngModel)]="aprendiz.course" id=" course" name=" course">
-        <button class="btn" type="submit">Registrar</button>
+        <button class="btn" type="submit">Actualizar</button>
     </form>
   </div>
 </div>
