--- a/src/app/components/resgister-event/resgister-event.component.html
+++ b/src/app/components/resgister-event/resgister-event.component.html
@@ -1,1 +1,13 @@
-<p>resgister-event works!</p>
+<div class="login-container">
+    <div class="login-info-container">
+      <h1 class="title">Registro Event</h1>
+      <form class="inputs-container" (ngSubmit)="saveEvent()">
+          <input class="input" type="text" placeholder="Nombre del Evento" [(ngModel)] = "event.name" id="name" name="name" >
+          <input class="input" type="text" placeholder="Descripcion" [(ngModel)]= "event.description" id="description" name="description">
+          <input class="input" type="text" placeholder="lugar" [(ngModel)]="event.place" id="place" name="place">
+          <input class="input" type="datetime-local" placeholder="fecha del evento" [(ngModel)]="event.date" id="date " name="date">
+          <button class="btn" type="submit">Registrar</button>
+      </form>
+    </div>
+</div>
+
