--- a/src/app/components/home-main/home-main.component.css
+++ b/src/app/components/home-main/home-main.component.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0; 
 }
-.content {
+form{
     height: 84vh;
     width: 130%;
     display: flex;
@@ -16,7 +16,7 @@
     font-size: 50px;
     color: #000;
 }
-.btn {
+button {
     display: inline-block;
     padding: 10px 40px;
     border: 2px solid #9c27b0;
@@ -24,7 +24,7 @@
     text-decoration: none;
     background: #9c27b0;
 }
-.btn:hover {
+button:hover {
     background: none;
     color: #000;
     
