se estan haciendo pruebas

--- a/src/app/components/home-main/home-main.component.html
+++ b/src/app/components/home-main/home-main.component.html
@@ -12,6 +12,7 @@
         <button type="submit" >asistir</button>
 
     </form>
+    <button [routerLink]="['registerresponsible']">prueba</button>
 
 
 </div>
