--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
     <div class="login-info-container">
       <h1 class="title">Iniciar sesión</h1>
-      <form class="inputs-container" (ngSubmit)="userloguin()">
+      <form class="inputs-container" >
           <input class="input" type="text" placeholder="Usuario" id=" emailid" name=" emailid" [(ngModel)]="user
           .emailid">
           <input class="input" type="password" placeholder="Contraseña" id=" password" name="password" [(ngModel)]="user.password">
