se modifico el estilo completo de diferentes paginas

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,7 +10,7 @@
     
               </div>
                 <div class="logo">
-                  <h1>Inventario sena </h1>
+                  <h1>Eventos Sena  </h1>
                 </div>
     
               </div>
