--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -147,7 +147,7 @@ width: 60%;
 }
 .container_two{
 background-color: #1d1d1dd8;
-height: 130px;
+height: 114px;
 width: 100%;
 
 }
@@ -161,7 +161,7 @@ align-items: center;
 }
 .btn-menu label{
 color: #fff;
-font-size: 36px;
+font-size: 1.5rem;
 cursor: pointer;
 margin: 0 45px;
 }
@@ -169,6 +169,11 @@ margin: 0 45px;
 .logo{
 color: #fff;
 margin: 47px 0%;
+
+}
+
+.logo h1{
+    font-size: 1.5rem;
 }
 #btn-menu{
 display: none;
@@ -217,6 +222,7 @@ padding: 20px;
 color: #c7c7c7;
 border-left: 5px solid transparent;
 transition: all 400ms ease;
+font-size: 16px;
 }
 .cont-menu nav a:hover{
 border-left: 5px solid #c7c7c7;
