--- a/src/app/components/home-main/home-main.component.css
+++ b/src/app/components/home-main/home-main.component.css
@@ -19,10 +19,10 @@ form{
 button {
     display: inline-block;
     padding: 10px 40px;
-    border: 2px solid #9c27b0;
+    border: 2px solid rgb(23, 111, 211);
     color: #fff;
     text-decoration: none;
-    background: #9c27b0;
+    background-color: rgb(23, 111, 211);
 }
 button:hover {
     background: none;
