--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
@@ -1,24 +1,28 @@
-<table class="table table-striped">
-	<thead>
-		<tr>
-			<th scope="col">id</th>
-			<th scope="col" sortable="name" >nombre</th>
-			<th scope="col" sortable="area" >document</th>
-			<th scope="col" sortable="population" >correo</th>
-            <th scope="col" sortable="population" >curso</th>
-			<th scope="col" sortable="population" >Editar</th>
-			<th scope="col" sortable="population" >Eliminar</th>
-		</tr>
-	</thead>
-	<tbody *ngIf="  Aprendiz.length != 0">
-		<tr *ngFor="let Aprendices of Aprendiz">
-			<th scope="row"></th>
-			<td>{{Aprendices.document}}</td>
-			<td>{{Aprendices.full_name}}</td>
-            <td>{{Aprendices.email}}</td>
-            <td>{{Aprendices.course}}</td>
-			<td><button routerLink="/updateaprendiz/{{Aprendices.id}}">Editar</button></td>
-			<td><button (click)="borrar(Aprendices.id)">Eliminar</button></td>
-		</tr>
-	</tbody>
-</table>
+
+<div class="position-table">
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th scope="col" sortable="name" >Documento</th>
+				<th scope="col" sortable="area" >Nombre</th>
+				<th scope="col" sortable="population" >Correo</th>
+				<th scope="col" sortable="population" >Curso</th>
+				<th scope="col" sortable="population" >Editar</th>
+				<th scope="col" sortable="population" >Eliminar</th>
+			</tr>
+		</thead>
+		<tbody *ngIf="  Aprendiz.length != 0">
+			<tr *ngFor="let Aprendices of Aprendiz">
+				<td>{{Aprendices.document}}</td>
+				<td>{{Aprendices.full_name}}</td>
+				<td>{{Aprendices.email}}</td>
+				<td>{{Aprendices.course}}</td>
+				<td><button routerLink="/updateaprendiz/{{Aprendices.id}}" class="button_one">Editar<span></span></button></td>
+				<td><button (click)="borrar(Aprendices.id)" class="button_tow">Eliminar<span></span></button></td>
+			</tr>
+		</tbody>
+	</table>
+</div>
+	
+
+
