--- a/src/app/components/register-aprendiz/register-aprendiz.component.html
+++ b/src/app/components/register-aprendiz/register-aprendiz.component.html
@@ -1,14 +1,14 @@
-<div class="login-container">
-    <div class="login-info-container">
-      <h1 class="title">Registro Aprendiz</h1>
-      <form class="inputs-container" (ngSubmit)="saveAprendiz()">
-          <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "aprendiz.full_name" id="name" name="name" >
-          <input class="input" type="number" placeholder="documento " [(ngModel)]= "aprendiz.document" id="document" name="document">
-          <input class="input" type="text" placeholder="correo" [(ngModel)]="aprendiz.email" id="email" name="email">
-          <input class="input" type="text" placeholder="Programa de formacion" [(ngModel)]="aprendiz.course" id=" course" name=" course">
-          <button class="btn" type="submit">Registrar</button>
-      </form>
-    </div>
-</div>
+<div class="body">
+  <form class="form" (ngSubmit)="saveAprendiz()">
+    <span class="title">Registrar Aprendiz</span>
+    <span class="sub mb">Registra el aprendiz llenando los siguientes campos</span>
+   <input id="file" type="file">
+   <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "aprendiz.full_name" id="name" name="name" >
+   <input class="input" type="number"  placeholder="Documento " [(ngModel)]= "aprendiz.document" id="document" name="document">
+   <input class="input" type="text" placeholder="Correo" [(ngModel)]="aprendiz.email" id="email" name="email">
+   <input class="input" type="text" placeholder="Programa de formación" [(ngModel)]="aprendiz.course" id=" course" name=" course">
+      <button type="submit">Registrar</button>
+  </form>
 
+</div>
 
