--- a/src/app/components/register-responsible/register-responsible.component.html
+++ b/src/app/components/register-responsible/register-responsible.component.html
@@ -1,12 +1,11 @@
-<div class="login-container">
-    <div class="login-info-container">
-      <h1 class="title">Registro Responsable</h1>
-      <form class="inputs-container" (ngSubmit)="saveResponsible()">
-          <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "responsible.full_name" id="name" name="name" >
-          <input class="input" type="number" placeholder="documento " [(ngModel)]= "responsible.document" id="document" name="document">
-          <input class="input" type="text" placeholder="correo" [(ngModel)]="responsible.email" id="email" name="email">
-          <input class="input" type="text" placeholder="Programa de formacion asosiado" [(ngModel)]="responsible.associated" id="associated " name=" course">
-          <button class="btn" type="submit">Registrar</button>
-      </form>
-    </div>
+<div class="body">
+  <form class="form" (ngSubmit)="saveResponsible()">
+    <span class="title">Registrar Responsable</span>
+    <span class="sub mb">Registra el responsable llenando los siguientes campos</span>
+    <input class="input" type="text" placeholder="Nombre Completo" [(ngModel)] = "responsible.full_name" id="name" name="name" >
+    <input class="input" type="number" placeholder="documento " [(ngModel)]= "responsible.document" id="document" name="document">
+    <input class="input" type="text" placeholder="correo" [(ngModel)]="responsible.email" id="email" name="email">
+    <input class="input" type="text" placeholder="Programa de formacion asosiado" [(ngModel)]="responsible.associated" id="associated " name=" course">
+      <button type="submit">Registrar</button>
+  </form>
 </div>
