se agregaron nuevas funcionalidades

--- a/src/app/components/home-main/home-main.component.html
+++ b/src/app/components/home-main/home-main.component.html
@@ -6,9 +6,9 @@
         <h2 class="title">Asiste a tu evento</h2>
     
         <label >Documento</label>
-        <input type="number" placeholder="ingrese el documento"  [(ngModel)] = "idAprendiz" name="idAprendiz">
+        <input type="number" placeholder="ingrese el documento"  [(ngModel)] = "attendance.idAprendiz" name="idAprendiz">
         <label>Codigo Del Evento</label>
-        <input type="number" placeholder="ingrese el codigo del evento" [(ngModel)] = "idEvent" name="idEvent">
+        <input type="number" placeholder="ingrese el codigo del evento" [(ngModel)] = "attendance.idEvent" name="idEvent">
         <button type="submit" >asistir</button>
 
     </form>
