--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -30,6 +30,8 @@
                     <a [routerLink]="['/listallresponsible']">Listar responsables</a>
                     <a [routerLink]="['/registerevent']">Registrar eventos</a>
                     <a [routerLink]="['/listallevent']">Listar eventos </a>
+                    <a [routerLink]="['/listallattendance']">Listar asistencia </a>
+
                   </nav>
                 </nav>
                 <label for="btn-menu">⨉</label>
