--- a/src/app/components/list-all-event/list-all-event.component.html
+++ b/src/app/components/list-all-event/list-all-event.component.html
@@ -1,4 +1,7 @@
 <div class="position-table">
+	<div class="title">
+		<h1>Lista Eventos</h1>
+	</div>
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -21,5 +24,8 @@
 			</tr>
 		</tbody>
 	</table>
+	<div class="algo" *ngIf="Event && Event.length == 0" #alertavacio>
+		<p>no hay ningun Evento registrado</p>
+	</div>
 	
 </div>
