--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.css
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.css
@@ -1,17 +1,10 @@
-table{width: 90%; border: 1px solid #515151; border-collapse: collapse;}
-th, td { text-align: center; vertical-align: top; height: 2%;}
-th {border: 1px solid #515151; border-spacing: 0; text-transform: uppercase; color: #333;}
-td {border-left: 1px solid #515151;  height: 3rem;}
-.position-table{ display: flex; justify-content: center; height: 79vh; flex-direction: column; align-items: center;}
-/* .scroll{
-    overflow: scroll;
-} */
+
 .button_one {
     border: none;
-    /* display: block; */
+
     position: relative;
     padding: 0.7em 2.4em;
-    /* font-size: 18px; */
+
     background: transparent;
     cursor: pointer;
     -webkit-user-select: none;
@@ -60,14 +53,14 @@ color: white;
 background: #2751cd;
 }
 
-/*sfaaaaaaaa*/
+
 
 .button_tow{
     border: none;
-    /* display: block; */
+
     position: relative;
     padding: 0.7em 2.4em;
-    /* font-size: 18px; */
+
     background: transparent;
     cursor: pointer;
     -webkit-user-select: none;
@@ -116,17 +109,31 @@ color: white;
 background: #2751cd;
 }
 
+
+
 .title{
     height: 15vh;
+    text-align: center;
+    padding: 7%;
 }
 
-
 .algo{
-    height: 30vh;
+    height: 19vh;
     
 }
 .algo p{
     text-align: center;
     font-size: 25px;
     margin: 50px 0;
+} 
+
+
+.my-custom-scrollbar {
+    height: 250px;
+    overflow: auto;
+}
+.table-wrapper-scroll-y {
+    width: 90% ;
+    text-align: center;
+    margin: 0 5%;
 }
