se agregaron los estilos a los componentes de actualizar

--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
@@ -22,8 +22,8 @@
 				<td>{{Aprendices.full_name}}</td>
 				<td>{{Aprendices.email}}</td>
 				<td>{{Aprendices.course}}</td>
-				<td><button routerLink="/updateaprendiz/{{Aprendices.id}}" class="button_one">Editar<span></span></button></td>
-				<td><button (click)="borrar(Aprendices.id)" class="button_tow">Eliminar<span></span></button></td>
+				<td><button routerLink="/updateaprendiz/{{Aprendices.document}}" class="button_one">Editar<span></span></button></td>
+				<td><button (click)="borrar(Aprendices.document)" class="button_tow">Eliminar<span></span></button></td>
 			</tr>
 		</tbody>
 	</table>
