--- a/src/app/components/list-all-event/list-all-event.component.html
+++ b/src/app/components/list-all-event/list-all-event.component.html
@@ -8,6 +8,7 @@
 	<table class="table table-bordered table-striped mb-0">
 	  <thead>
 		<tr>
+			<th scope="col"  >Codigo del evento</th>
 			<th scope="col"  >Nombre</th>
 			<th scope="col"  >Descripcion</th>
 			<th scope="col" >Lugar</th>
@@ -18,6 +19,7 @@
 	  </thead>
 		<tbody *ngIf="  Event.length != 0">
 			<tr *ngFor="let events of Event">
+				<td>{{events.id}}</td>
 				<td>{{events.name}}</td>
 				<td>{{events.description}}</td>
 				<td>{{events.place}}</td>
