se agrego la funcionalidad de buscar

--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.html
@@ -1,19 +1,10 @@
 <div class="title">
 	<h1>Lista Aprendices</h1>
 </div>
-<div class="" >
-	<label >Escribe el documento del aprendiz</label>
-	<input type="text" name="search-box" class="search-box" [(ngModel)]="search">
-	<section class="search-results">
-	</section>
-	
+<div class="input-wrapper" >
+	<input type="text" name="search-box" class="search-box" [(ngModel)]="search" placeholder="Busca el aprendiz por numero de documento o nombre ">
 
 </div>
-
-	<!-- <div>
-		<input type="text" [(ngModel)] = "filter.contenido" name="contenido" (input)="listaprendiz()"
-		placeholder="hola" />
-	</div> -->
 
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
 	
