--- a/src/app/components/list-all-aprendiz/list-all-aprendiz.component.css
+++ b/src/app/components/list-all-aprendiz/list-all-aprendiz.component.css
@@ -114,7 +114,7 @@ background: #2751cd;
 .title{
     height: 15vh;
     text-align: center;
-    padding: 7%;
+    padding: 6%;
 }
 
 .algo{
@@ -137,3 +137,17 @@ background: #2751cd;
     text-align: center;
     margin: 0 5%;
 }
+
+
+.input-wrapper input {
+    background-color: #eee;
+    border: none;
+    padding: 12px;
+    font-size: 1rem;
+    width: 28em;
+    border-radius: 1rem;
+    box-shadow: 0 0.4rem #dfd9d9;
+    cursor: pointer;
+    margin: 16px 72px;
+}
+
