--- a/src/app/components/list-all-responsible/list-all-responsible.component.html
+++ b/src/app/components/list-all-responsible/list-all-responsible.component.html
@@ -1,6 +1,10 @@
 <div class="title">
 	<h1>Lista Responsable</h1>
 </div>
+<div class="input-wrapper" >
+	<input type="text" name="search-box" class="search-box" [(ngModel)]="search" placeholder="Busca el Responsable por nombre o curso asosiado">
+
+</div>
 
 <div class="table-wrapper-scroll-y my-custom-scrollbar">
 	
@@ -17,7 +21,7 @@
 		</tr>
 	  </thead>
 		<tbody *ngIf="  responsible.length != 0">
-			<tr *ngFor="let responsibles of responsible">
+			<tr *ngFor="let responsibles of responsible | filter:search">
 				<td>{{responsibles.document}}</td>
 				<td>{{responsibles.full_name}}</td>
 				<td>{{responsibles.email}}</td>
